<resources>
    <string name="app_name">FitnessCenter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_slideshow">Proteínas</string>
    <string name="menu_creatina">Creatinas</string>
    <string name="menu_preentreno">PreEntrenos</string>
    <string name="menu_agua">Aguas</string>
    <string name="menu_termogenico">Termogénicos</string>

    <string-array name="Marcas_Proteina">

        <item>Optimum Nutrition</item>
        <item>43</item>
        <item>Birdman</item>
        <item>NitroTech</item>
        <item>ISO 100</item>

    </string-array>

    <string-array name="Cantidades_Proteina">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>

    <string-array name="Marcas_Creatina">
        <item>Jacked Factory</item>
        <item>Birdman</item>
        <item>Vitazona</item>
    </string-array>


    <string-array name="Marcas_Preentreno">
        <item>Psychotic</item>
        <item>Psychotic Black</item>
        <item>Psychotic Gold"</item>
        <item>Nitraflex GAT</item>
        <item>C4 Original</item>
        <item>Venom</item>
        <item>Optimun Nutrition</item>

    </string-array>

    <string-array name="Marcas_Termo">
        <item>B-life T+G</item>
        <item>B-life MTP</item>
        <item>Get Ripped</item>
        <item>Lipo 6</item>
        <item>Essential NT</item>


    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>